# apertium-mal

./: Makefile  Makefile.am  README  TODO  apertium-mal.mal.lexc  apertium-mal.mal.rlx  apertium-mal.mal.tsx  apertium-mal.mal.twol  apertium-mal.pc.in  apertium-mal.post-mal.dix  configure.ac  modes.xml  test.lexc
dev/: adj_list.txt  adv_list.txt  countstems.sh  fifth.txt  first.txt  fourth.txt  mlfreqlist.txt  sandhi_doc  spellrelax.twol  test.lexc  third.txt  unknown.txt  verb_list
dev/redux/: Makefile  apertium-mal.mal.lexc  apertium-mal.mal.twol  test-cases.txt
incubator/: COPYING.GFDL  apertium-ay-es.ay.dix  apertium-br-cy.br-cy.dix  apertium-br-cy.br-cy.rlx  apertium-cy-kw.kw.dix  apertium-da-en.da-en.dix  apertium-dv-en.dv-thaana.dix  apertium-en-bn.en-bn.dix  apertium-en-el.el.dix  apertium-en-ga.en-ga.dix.xml  apertium-en-ga.ga.dix  apertium-en-gd.en-gd.dix.xml  apertium-en-gv.en-gv.dix  apertium-en-hu.en-hu.dix  apertium-en-la.la.dix  apertium-en-lt.en-lt.dix  apertium-en-lt.lt.dix  apertium-en-lv.en-lv.dix  apertium-en-lv.lv.dix  apertium-en-ru.en-ru.dix.xml  apertium-fo-is.fo-is.dix  apertium-fo-is.fo.dix  apertium-fo-is.is.rlx  apertium-ga-gd.ga.dix~  apertium-ga-gv.ga-gv.dix  apertium-ga-gv.gv-ga.rlx  apertium-ga-gv.gv.dix  apertium-he-ar.he.dix  apertium-hi-ur.hi.dix  apertium-hi-ur.hi.dix.old  apertium-hi-ur.ur.dix  apertium-hi.hi.dix  apertium-hi.hi_WX.dix  apertium-hy-en.hy.dix  apertium-ku-fa.ku.dix  apertium-lt-lv.lt-lv.dix  apertium-mk-sq.sq.dix  apertium-os-fa.os.acx  apertium-os-fa.os.dix  apertium-pl-cs.cs.dix  (+3 more)
incubator/apertium-af-nl/: AUTHORS  ChangeLog  Makefile.am  README  af-nl.prob  apertium-af-nl.af-nl.dix.xml  apertium-af-nl.af-nl.t1x  apertium-af-nl.af-nl.t3x  apertium-af-nl.af.dix.xml  apertium-af-nl.nl.dix.xml  apertium-af-nl.post-nl.dix  apertium-af-nl.symbols.xml  configure.ac  dutch-hitparade-more-than-10.txt  dutch-nouns-more-than-10.txt  modes.xml
incubator/apertium-de-en/: AUTHORS
incubator/apertium-en-af/: ACKNOWLEDGEMENTS  AUTHORS  Makefile-parser.am  Makefile.am  NEWS  README  REGRESSION  TODO  af-en.unsupervised.make  apertium-en-af.af-en.t1x  apertium-en-af.af-en.t2x  apertium-en-af.af.dix.xml  apertium-en-af.af.tsx  apertium-en-af.en-af.dix.xml  apertium-en-af.en-af.t1x  apertium-en-af.en-af.t2x  apertium-en-af.en.dix.xml  apertium-en-af.en.reg  apertium-en-af.en.tsx  apertium-en-af.post-en.dix  apertium-en-af.symbols.xml  configure.ac  en-af.unsupervised.make  fix-scol.rb  modes.xml  paramedic_list.sorted.txt  paramedic_wordlist_en_bidix_not_monodix_redux.europarl-freq.txt  paramedic_wordlist_en_bidix_not_monodix_redux.txt  todo_checking.freq.txt
incubator/apertium-en-af/tests/: Arctic-af.txt  Arctic-en.txt
incubator/apertium-en-de/: AUTHORS  Adjektiven.txt  Makefile.am  README  TODO  Verben  WP_Data.txt  apertium-en-de.de-en.t1x  apertium-en-de.de-en.t3x  apertium-en-de.de.dix  apertium-en-de.de.tsx  apertium-en-de.en-de.dix  apertium-en-de.en-de.t1x  apertium-en-de.post-de.dix  apertium-en-de.post-en.dix  autogen.sh  configure.ac  de-en-unsupervised.make  en-de-unsupervised.make  en-nouns  modes.xml
incubator/apertium-en-de/de-tagger-data/: README
incubator/apertium-en-de/en-tagger-data/: README
incubator/apertium-en-de/wordmirror/: WordMirror.py  printnounxml.py
incubator/apertium-en-sco/: README  apertium-en-sco.en-sco.dix  apertium-en-sco.sco.dix  apertium-en-sco.sco.tsx  sco-en.prob
incubator/apertium-es-an/: apertium-es-an.an.dix  apertium-es-an.es-an.dix  apertium-es-an.post-an.dix
incubator/apertium-hi-en-unicode/: AUTHORS  README  apertium-hi-en.en.dix  apertium-hi-en.hi-en.dix  apertium-hi-en.hi-en.t1x  apertium-hi-en.hi-en.t2-0x  apertium-hi-en.hi-en.t2-1x  apertium-hi-en.hi-en.t3x  apertium-hi-en.hi.dix  apertium-hi-en.hi.tsx  autogen.sh  (+1 more)
incubator/apertium-hi-en-wx/: AUTHORS  ChangeLog  Makefile-bkp  Makefile.am  README  aper-output  apertium-en-en.en-en.t1x  apertium-en-hi.en-hi-jnk.dix  apertium-en-hi.en-hi.t1x  apertium-en-hi.en-hi.t2x  apertium-en-hi.en-hi.t3x  apertium-en-hi.en.tsx  apertium-en-hi.hi-en.t1x  apertium-en-hi.hi-en.t2x  apertium-en-hi.hi-en.t3x  apertium-en-hi.hi.dix  apertium-en-hi.hi.tsx  apertium-en-hi.post-hi.dix  apertium-en-hi.trules-en-hi.xml  apertium-en-hi.trules-hi-en.xml  apertium_hn.dix  autogen.sh  configure.ac  en-hi-unsupervised.make  hi-en-unsupervised.make  hi-en.prob  lextor.make  modes.xml
incubator/apertium-hi-en-wx/ca-tagger-data/: README
incubator/apertium-hi-en-wx/en-tagger-data/: README
incubator/apertium-hi-en-wx/lextor-data/: README
incubator/apertium-sa-XX/: AUTHORS  ChangeLog  Makefile.am  README  apertium-sa-XX.ucs-wx.xml  configure.ac  cons-lig.pl  modes.xml
incubator/apertium-sme-smj/: AUTHORS  Makefile.am  NEWS  README  apertium-sme-smj.post-smj.dix  apertium-sme-smj.sme-smj.dix  apertium-sme-smj.sme-smj.rlx  apertium-sme-smj.sme-smj.t1x  apertium-sme-smj.sme-smj.t2x  apertium-sme-smj.sme-smj.t3x  configure.ac  modes.xml  regression-tests.sh
incubator/apertium-sme-smj/dev/: apertium_bleu1.txt  darbahit.paradigm  fictilemmapos.txt  gohcodit.paradigm  missingsme.txt  missingsme2.txt  missingsme3.txt  missingsmj.txt  missingsmj2.txt  smeparadigms  smeparadigms2.txt  smepronounsfullform.txt  smepronwithtags.speling.txt  smepronwithtags.txt  smjadjfullform.txt  smjadjlemma.txt  smjadverbs.txt  smjintersectionlemma2.txt  smjintersectionlemmatags.txt  smjnounfullform.txt  smjnounlemma.txt  smjparadigms  smjparadigms10.txt  smjparadigms11.txt  smjparadigms2.txt  smjparadigms4.txt  smjparadigms5.txt  smjparadigms6.txt  smjparadigms8.txt  smjparadigms9.txt  smjpronouns.txt  smjverbfullform.txt  smjverblemma.txt  testsentences.txt  veahkki.paradigm  viehkke.paradigm
incubator/apertium-tr-az/: AUTHORS  Makefile.am  README  apertium-tr-az.az-tr.t1x  apertium-tr-az.az-tr.t2x  apertium-tr-az.az.dix.xml  apertium-tr-az.post-tr.dix  apertium-tr-az.symbols.xml  apertium-tr-az.tr-az.dix.xml  apertium-tr-az.tr-az.t1x  apertium-tr-az.tr-az.t2x  apertium-tr-az.tr-az.t3x  apertium-tr-az.tr.dix.xml  config.in  configure.ac  modes.xml
tests/: clitics.yaml
(+45 files in other folders)
